# bad-models

./: .gitignore  README.md  dataset.py  main.py  model.py  pyproject.toml  tokenizer.py  tokens.txt.dvc  transformer.py
configs/: config.yaml
configs/dataset/: small.yaml
configs/tokenizer/: small.yaml
src/bad_models/: dataset.py  tokenizer.py  transformer.py
src/bad_models/configs/: config.yaml
src/bad_models/configs/embeddings/: medium.yaml
src/bad_models/configs/transformer/: medium.yaml  small.yaml
