[project]
name = "bad-models"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "hydra-core>=1.3.2",
    "lightning>=2.5.0.post0",
    "torch>=2.6.0",
]


[tool.uv.sources]
torch = { index = "pytorch" }


[[tool.uv.index]]
# Optional name for the index.
name = "pytorch"
url = "https://download.pytorch.org/whl/rocm6.2.4"
default = false

[dependency-groups]
dev = [
    "dvc>=3.59.1",
]
