[project]
name = "bad-models"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "datasets>=2.19.1",
    "huggingface-hub>=0.28.1",
    "hydra-core>=1.3.2",
    "lightning>=2.5.0.post0",
    "more-itertools>=10.6.0",
    "pandas>=2.2.3",
    "pyarrow>=19.0.0",
    "pygtrie>=2.5.0",
    "torch>=2.6.0",
]

[project.scripts]
transformer = "bad_models.transformer:train_base_model"

[tool.uv.sources]
torch = { index = "pytorch" }


[tool.hatch.build.targets.wheel]
packages = ["src/bad_models"]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[[tool.uv.index]]
# Optional name for the index.
name = "pytorch"
url = "https://download.pytorch.org/whl/rocm6.2.4"
default = false

[dependency-groups]
dev = ["dvc>=3.59.1"]
